--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=car_rental_system_SpringBoot
 # application.properties
 
 # DataSource settings: set here  own configurations for the database connection
-spring.datasource.url=jdbc:mysql://localhost:3306/crstest?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fitnesstest?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
